# vana-compute-job-service-ml

./: .gitignore  Dockerfile  LICENSE  README.md  dummy_data.sql  image-build.sh  image-export.sh  image-run.sh  worker.py
.github/workflows/: build-and-release.yml  image-checks.yml
app/: README.md  __init__.py  config.py  main.py  pyproject.toml
app/ml/: inference.py  trainer.py
app/models/: __init__.py  health.py  inference.py  openai.py  schemas.py  trainer.py  training.py
app/routers/: health.py  inference.py  training.py
app/services/: __init__.py  health.py  inference.py  training.py
app/utils/: __init__.py  db.py  devices.py  events.py  query_engine_client.py
input/: query_results.db
output/: stats.json
scripts/: image-build.sh  image-export.sh  image-run.sh
tests/: __init__.py  conftest.py  test_config.py  test_integration.py  test_main.py  test_models.py  test_routers_health.py  test_routers_inference.py  test_routers_training.py
