[tool.poetry]
name = "vana-inference"
version = "0.1.0"
description = "FastAPI-based inference/training engine for Vana"
authors = ["Your Name <your.email@example.com>"]
readme = "app/README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
pydantic = "^2.6.0"
unsloth = {extras = ["cu121onlytorch240", "huggingface"], version = "2024.12.4"}
torch = ">=2.0.0"
transformers = "^4.38.0"
accelerate = ">=0.34.1"
bitsandbytes = "^0.45.5"
peft = "^0.15.2"
datasets = "^3.6.0"
sqlalchemy = "^2.0.0"
tiktoken = "^0.9.0"  # Added for OpenAI-compatible token counting
psutil = "^5.9.0"  # Added for system resource monitoring in health checks

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"